--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,6 @@
 <html>
-	<head>
+	<head>	
+		<title> STRANDED 5 - REWARD FINAL 17 </title>
 		<link rel="stylesheet" type="text/css" href="styles2.css">
 	<head>
 	<body onload="shuffle()">
